fixed intro overlap

--- a/projects/wardrobe/style/style.css
+++ b/projects/wardrobe/style/style.css
@@ -24,7 +24,7 @@ p {
 
 .intro{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 @media (min-width: 1400px) {
